# worm

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/worm/: valid_expr.hpp
include/worm/detail/: meta_utils.hpp  sfinae.hpp
